reduce bottom margin to prevent bottom gap on photo in section

--- a/src/sass/components/_sections.scss
+++ b/src/sass/components/_sections.scss
@@ -109,8 +109,8 @@
     }
 
     .section__lead {
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: 40px;
+        margin-bottom: 40px;
 
         @include media(sm) {
             font-size: 18px;
